<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gainsboro"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activity.EntranceActivity"
        android:gravity="top|center">

    <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/imageView"
            android:src="@drawable/app_icon_deep_shy_blue"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"/>


    <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="32dp">
        <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:id="@+id/username_input_area"
                android:layout_height="wrap_content">
            <EditText android:id="@+id/username_input"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:saveEnabled="false"
                      android:maxLength="48"
                      android:hint="@string/input_your_username"
                      android:layout_centerVertical="true"
                      android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:id="@+id/topic_input_area"
                android:layout_height="wrap_content">

            <EditText android:id="@+id/topic_input"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:saveEnabled="false"
                      android:maxLength="48"
                      android:hint="@string/input_the_topic_you_interested_in"
                      android:layout_centerVertical="true"
                      android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:id="@+id/broker_url_input_area"
                android:layout_height="wrap_content">

            <EditText android:id="@+id/broker_host_input"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:saveEnabled="false"
                      android:maxLength="48"
                      android:hint="@string/the_broker_host"
                      android:layout_centerVertical="true"
                      android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:id="@+id/database_url_input_area"
                android:layout_height="wrap_content">

            <EditText android:id="@+id/database_host_input"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:saveEnabled="false"
                      android:maxLength="48"
                      android:hint="@string/the_database_host"
                      android:layout_centerVertical="true"
                      android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
            android:background="@color/deepSkyBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:id="@+id/confirm"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>


</LinearLayout>
